--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Signaling server for OmegleClone video chat application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
-    "postinstall": "echo 'Dependencies installed successfully'"
+    "start": "node server.js"
   },
   "keywords": [
     "webrtc",
@@ -22,12 +19,8 @@
     "socket.io": "^4.6.1",
     "cors": "^2.8.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": ">=14.0.0"
   }
 }
 
